getAvgSAScore not work very well
