# app/Dcard/Controllers/ChartAPIController.php
@@ -97,6 +97,20 @@ class ChartAPIController extends APIController
      *              "Authorization": {}
      *         }
      *      },
+     *     @OA\Parameter(
+     *          name="date1",
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *          name="date2",
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
      *      @OA\Response(
      *          response=200,
      *          description="Success",
@@ -120,7 +134,7 @@ class ChartAPIController extends APIController
         try {
             $date1 = $request -> date1;
             $date2 = $request -> date2;
-            $avgSAScore = $this->_nlpService->getAvgSAScore();
+            $avgSAScore = $this->_nlpService->getAvgSAScore($date1, $date2);
 
             return response()->json($avgSAScore, 200, ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8']);
         } catch (\Exception $e) {
